sumo/tests/sumo/output/e2/errors/freq_false/errors.sumo
Error: Attribute 'freq' in definition of e2-detector '4/1to3/1' is not an int.
Quitting (on error).
